# DataQualityServices

./: .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
artifacts/: feature_columns.json  scaler_XGBOD.joblib  xgbod_threshold.joblib
dataquality-aiservices/: .dockerignore  .gitattributes  .gitignore  Comands.txt  Dockerfile  Dockerfile.base  README.md  ReadMe.txt  docker-compose.gpu.yml  docker-compose.yml  gitignore  requirements-base.before-dedup.txt  requirements-base.txt  requirements_15_12.txt  streamlit_auto.py
dataquality-aiservices/.github/: copilot-instructions.md
dataquality-aiservices/.streamlit/: config.toml  secrets.toml
dataquality-aiservices/BE/: Dockerfile  app.py  metadata.jsonld  overall.ipynb  requirements-base-old-image.txt  requirements-current-image.txt  requirements.txt
dataquality-aiservices/FE/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dataquality-aiservices/JupyterNotebooks/: AutoML.ipynb  RandomForest.ipynb  xGBoost.ipynb
dataquality-aiservices/assets/: style.css
dataquality-aiservices/services_featuretype_personal/: feature_generator.py  gpt.py  huggingface_model.py  services_LLM.py
dataquality-aiservices/src/: global_controller.py  meta_data_export.py  plots.py  streamlit_app.py  summarising_page.py  summary.py  tabular_data.py  (+2 more)
efficient-labelling/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  requirements.txt
image-deblurring/: .dockerignore  Dockerfile  app.py  requirements.txt
(+129 files in other folders)
