[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiservices"
version = "0.1.0"
description = "Production Flask REST API for KI-Allianz AI services"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Bhuvneshwar Bajpeyee", email = "bhuvneshwarbajpeyee@hs-aalen.de" }]
license = { text = "Apache-2.0" }
dependencies = [
  "Flask>=3.0.0",
  "gunicorn>=22.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "xlrd==1.2.0"
  "authlib>=1.3.0"
  "onnxruntime>=1.18.0"
  "Pillow>=10.0.0",
  "XlsxWriter>=3.2.0"
  "minio>=7.1.0"
  "boto3>=1.28.0"
  joblib==1.4.2
  "matplotlib==3.8.0"
  "numpy==1.24.3"     
  "pandas==2.3.3"
  "pyod==2.0.3"
  "scikit-learn==1.2.2"  
  "xgboost==2.0.3"
  "openpyxl== 3.1.5"  
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "ruff", "mypy"]
